src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_parens.snap
---
source: src/pagoda/tokenizer.rs
assertion_line: 140
expression: tokens
---
[
    Token {
        kind: LParen,
        span: Span {
            start: 0,
            end: 1,
            literal: "(",
        },
    },
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 1,
            end: 2,
            literal: "1",
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 2,
            end: 3,
            literal: ")",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 3,
            end: 3,
            literal: "",
        },
    },
]
