src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_return_keyword.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Return,
        span: Span {
            start: 0,
            end: 6,
            literal: "return",
        },
    },
    Token {
        kind: Int(
            1,
        ),
        span: Span {
            start: 7,
            end: 8,
            literal: "1",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 8,
            end: 8,
            literal: "",
        },
    },
]
