src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_shifts.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Ident(
            "a",
        ),
        span: Span {
            start: 0,
            end: 1,
            literal: "a",
        },
    },
    Token {
        kind: Shl,
        span: Span {
            start: 1,
            end: 3,
            literal: "<<",
        },
    },
    Token {
        kind: Ident(
            "b",
        ),
        span: Span {
            start: 3,
            end: 4,
            literal: "b",
        },
    },
    Token {
        kind: Ident(
            "c",
        ),
        span: Span {
            start: 5,
            end: 6,
            literal: "c",
        },
    },
    Token {
        kind: ShrAssign,
        span: Span {
            start: 6,
            end: 9,
            literal: ">>=",
        },
    },
    Token {
        kind: Ident(
            "d",
        ),
        span: Span {
            start: 9,
            end: 10,
            literal: "d",
        },
    },
    Token {
        kind: Ident(
            "e",
        ),
        span: Span {
            start: 11,
            end: 12,
            literal: "e",
        },
    },
    Token {
        kind: ShlAssign,
        span: Span {
            start: 12,
            end: 15,
            literal: "<<=",
        },
    },
    Token {
        kind: Ident(
            "f",
        ),
        span: Span {
            start: 15,
            end: 16,
            literal: "f",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 16,
            end: 16,
            literal: "",
        },
    },
]
