src/pagoda/snapshots/todaiji__pagoda__tokenizer__tests__tokenizes_signed_ints.snap
---
source: src/pagoda/tokenizer.rs
expression: tokens
---
[
    Token {
        kind: Minus,
        span: Span {
            start: 1,
            end: 2,
            literal: "-",
        },
    },
    Token {
        kind: Int(
            42,
        ),
        span: Span {
            start: 2,
            end: 4,
            literal: "42",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 5,
            end: 5,
            literal: "",
        },
    },
]
